chore: Package setup

--- a/Editor/MartonioJunior.TestSuite.Editor.asmdef
+++ b/Editor/MartonioJunior.TestSuite.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "[CompanyName].[PackageName].Editor",
+    "name": "MartonioJunior.TestSuite.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
