--- a/Tests/Editor/MartonioJunior.TestSuite.Editor.Tests.asmdef
+++ b/Tests/Editor/MartonioJunior.TestSuite.Editor.Tests.asmdef
@@ -1,7 +1,7 @@
 {
-	"name": "[CompanyName].[PackageName].Editor.Tests",
+	"name": "MartonioJunior.TestSuite.Editor.Tests",
 	"references": [
-		"[CompanyName].[PackageName].Editor"
+		"MartonioJunior.TestSuite.Editor"
 	],
 	"optionalUnityReferences": [
 		"TestAssemblies"
