--- a/Tests/Runtime/MartonioJunior.TestSuite.Tests.asmdef
+++ b/Tests/Runtime/MartonioJunior.TestSuite.Tests.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "[CompanyName].[PackageName].Tests",
+    "name": "MartonioJunior.TestSuite.Tests",
     "rootNamespace": "",
     "references": [
-        "[CompanyName].[PackageName]",
+        "MartonioJunior.TestSuite",
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner"
     ],
