--- a/Runtime/MartonioJunior.TestSuite.asmdef
+++ b/Runtime/MartonioJunior.TestSuite.asmdef
@@ -18,6 +18,12 @@
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.test-framework.performance",
+            "expression": "",
+            "define": "PERFORMANCE_TESTS_ENABLED"
+        }
+    ],
     "noEngineReferences": false
 }
