--- a/Tests/Runtime/MartonioJunior.TestSuite.Tests.asmdef
+++ b/Tests/Runtime/MartonioJunior.TestSuite.Tests.asmdef
@@ -4,14 +4,16 @@
     "references": [
         "MartonioJunior.TestSuite",
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "Unity.PerformanceTesting"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
