ci(Tests): Added conditional for performance tests

--- a/Tests/Runtime/MartonioJunior.TestSuite.Tests.asmdef
+++ b/Tests/Runtime/MartonioJunior.TestSuite.Tests.asmdef
@@ -19,6 +19,12 @@
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.test-framework.performance",
+            "expression": "",
+            "define": "PERFORMANCE_TESTS_ENABLED"
+        }
+    ],
     "noEngineReferences": false
 }
