build: Added Performance API as a dependency

--- a/Runtime/MartonioJunior.TestSuite.asmdef
+++ b/Runtime/MartonioJunior.TestSuite.asmdef
@@ -18,12 +18,6 @@
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ],
-    "versionDefines": [
-        {
-            "name": "com.unity.test-framework.performance",
-            "expression": "",
-            "define": "PERFORMANCE_TESTS_ENABLED"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
