--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.0.0",
     "unity": "2021.3",
     "description": "Custom Unity Package to ease the creation of tests for packages",
-    "dependencies": {},
+    "dependencies": {
+      "com.unity.test-framework.performance": "3.0.0-pre.2"
+    },
     "author": {
       "name": "Martônio Júnior",
       "url": "https://github.com/martoniojunior"
