--- a/Runtime/MartonioJunior.TestSuite.asmdef
+++ b/Runtime/MartonioJunior.TestSuite.asmdef
@@ -11,8 +11,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll",
-        "NSubstitute.dll"
+        "nunit.framework.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
